--- a/markdown/cs300.md
+++ b/markdown/cs300.md
@@ -51,12 +51,12 @@ plug on it.
 A data-intensive application sits on top of a DBMS, i.e. it is built with the
 underlying system in mind.
 
-# DBMS Architecture
+## DBMS Architecture
 
-Conceptual design &rarr Logical design &rarr physical design &rarr Database
+Conceptual design -> Logical design -> physical design -> Database
 storage.
 
-## Describing data
+### Describing data
 
 A **data model** is a collection of concepts used for describing data, hiding
 low-level storage detail. We represent it relationally, hierarchically, 
@@ -92,5 +92,147 @@ changing the user views
 - **Physical data independence** we can change the internal schema without
 having to change the conceptual schema or user views.
 
+## ER Model
 
+This is the conceptual design, therefore we concern ourselves with the 
+following:
+
+- What are the entities and relationships?
+- What information about these entities and relationships should we store?
+- What integrity constraints should hold? I.e. we should be doing something when
+something doesn't hold, i.e. relationship points to an entity that doesn't exist
+
+The ER diagram can be mapped to a relational schema; i.e. the ER isn't 
+implemented directly as it is purely conceptual, but is realized via 
+implementation.
+
+### The entity, and the entity set
+
+- **Entity** is a real-world object that is distinguishable from others, and is
+stored in a DB using a set of attributes
+- **Entity set** is a collection of similar entities *(e.g. employees)* which
+all have the same set of attributes. Each entity in a set has a *key* and each
+attribute has a *domain*.
+
+### Relationship and relationship set
+
+- **Relationship** is an association among two or more entities; a row 
+contains the keys of the entities participating. It can contain attributes which
+provide information about the relationship *(e.g. `since` which gives 
+information on when the relationship started)*.
+
+## Contraints in ER model
+
+### Key constraints
+
+This is where we introduce the following 
+
+- Many-to-many: employee can work in many departments. A department can have 
+many employees
+- One-to-many: each department has at most one manager
+- One-to-one: Each driver can drive at most one vehicle, and each vehicle has
+at most one driver.
+
+## Participation constraints
+
+We introduce
+
+- total participation: every employee should work in at least one department
+- partial participation: there could be some employees who are not managers
+
+## Weak Entity
+
+## Design Considerations
+
+A weak entity is one who can be identified uniquely only by considering the 
+primary key of another owner entity. The owner set and the weak entity set
+must participate in a one-to-many relationship (one owner, many weak entities),
+and weak entity set must have total participation in this relationship.
+
+### ISA hierarchies
+
+Think of it as inheritance. For example *contract employees ISA employees*, 
+signifying that a contracted employee is an employee. This allows us to add
+descriptive attributes to subclasses without needing to add them to the parent
+class. We define
+
+- **Overlap contraints:** "can an hourly employee be a contract employee as
+well?" -> allow or disallow
+- **Covering contraints:** does every employee entity also have to be either
+an hourly or contract employee? -> yes or no
+
+
+### Aggregation
+
+We can treat a relationship set as an entity set for the purpose of 
+participation in other relationships.
+
+
+### Entity vs. Attribute
+
+If we consider that an `Employee` has a single `Address`, then it could make 
+sense to have it as an attribute of `Employee`. However, in the case that an 
+`Employee` has multiple, we should make a new table for `Address` and have
+them both participate in a relationship, perhaps `Lives_at`.
+
+### Final Notes
+
+The above considerations are important during design, and are all subjective.
+
+# Lecture 02 relational model
+
+This is the model that has prevailed for most use cases.
+
+- Models complex data in a very simple structure that is easy to reason about
+- We can make arbitrarily complex queries with relative ease
+
+Recently, NoSQL DBs have been gaining in popularity
+
+- Function as key value stores
+- Skips the transaction part -> great scalability for analytic workloads
+
+## Basics
+
+- **Schema:** structural description of the relations in a database.
+- **Instance:** Actual contents at a given point in time. Includes
+cardinality *(number of rows)* and arity/degree *(number of attributes)*
+
+We introduce a `NULL` value that indicates an unknown or undefined attribute,
+but this introduces complexity. If I filter for `gpa >= 3.4`, where does `NULL`
+sit in the predicate?
+
+## Keys
+
+- **Superkey:** set of attributes s.t. no two distinct tuples can have the same
+values in all key fields *(not necessarily minimal)*
+- **Key:** Which is a minimal superkey
+- **Candidate key:** If there are multiple keys, each is refered to as a 
+candidate key.
+- **Primary key:** the candidate key that is chosen by the DBA *(database 
+admin)*
+
+We note that everything is checked when we insert something
+
+- Check all new values being inserted against the schema
+- check all previous values for duplicates
+
+This is a huge performance stop in the critical path of execution. Integrity
+constraints are expensive, and an insert isn't completed until the check has
+finished. Ideally, this should happen very quickly.
+
+In SQL, consider the following:
+
+```sql
+CREATE TABLE Person
+    (ssn CHAR(9),
+     name CHAR(20),
+     licence_num CHAR(10),
+     PRIMARY KEY(ssn),
+     UNIQUE(licence_num))
+```
+
+Where `UNIQUE(licence_num)` tells us that although it isn't the primary key, it
+should be unique for all instances.
+
+### Foreign Keys
 
